--- a/styles.css
+++ b/styles.css
@@ -69,3 +69,14 @@ h2 {
     color: #00509e;
     margin-bottom: 5px;
 }
+
+#back {
+    width: 100%;
+    max-width: 200px;
+    height: 50px;
+    border: none;
+    background-color: #00509e;
+    color: white;
+    border-radius: 15px;
+    cursor: pointer;
+}
